Fix #11: Improve align() @warn message

--- a/_elf.scss
+++ b/_elf.scss
@@ -143,6 +143,6 @@ $opposite: elf-get-opposite-layout-direction();
     } @elseif $direction == horizontal {
         justify-content: center;
     } @else {
-        @warn '$direction must be set to either "both", "vertical, or "horizontal"';
+        @warn '`$direction` parameter must be set to either `both`, `vertical` or `horizontal`. Given: `#{$direction}`.';
     }
 }
